# podcast-review-insights

./: .gitignore  README.md  functions.py  podcasts.ipynb  pyproject.toml  requirements.txt
notebooks/: podcast_review_analysis copy.ipynb  podcast_review_analysis.ipynb
src/podcast_review_insights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/podcast_review_insights/utils/: podcast_utilities.py
