[project]
name = "podcast-review-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "bleach==6.2.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "executing==2.2.0",
    "fonttools==4.56.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kaggle==1.6.17",
    "kiwisolver==1.4.8",
    "langdetect==1.0.9",
    "matplotlib-inline==0.1.7",
    "matplotlib==3.10.0",
    "narwhals==1.26.0",
    "nest-asyncio==1.6.0",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly==6.0.0",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2025.1",
    "pyzmq==26.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "scipy==1.10.1",
    "six==1.17.0",
    "smart-open==7.1.0",
    "stack-data==0.6.3",
    "text-unidecode==1.3",
    "textblob==0.19.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "wordcloud==1.9.4",
    "wrapt==1.17.2",
    "patsy==1.0.1",
    "statsmodels==0.14.4",
    "attrs==25.1.0",
    "fastjsonschema==2.21.1",
    "ipywidgets==8.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyterlab-widgets==3.0.13",
    "kaleido==0.2.1",
    "nbformat==5.10.4",
    "referencing==0.36.2",
    "rpds-py==0.22.3",
    "widgetsnbextension==4.0.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["podcast_review_insights", "podcast_review_insights.utils"]
